2007-09-20  Richard Jones  <rjones@redhat.com>

	* Makefile.in: Disable virt-df in this release until I have
	  time to fix it properly.

2007-09-19  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top.ml: Ignore transient error from
	  C.num_of_defined_domains when it cannot contact xend; that
	  was causing virt-top to exit when xend was restarted.

2007-09-18  Richard Jones  <rjones@redhat.com>

	* virt-df/virt_df.ml: Handle domains with partition-backed
	  block devices.

	* virt-top/virt_top.ml: Don't fail on older libvirt which would
	  give an error if list_domains or list_defined_domains was called
	  with n = 0.

	* ChangeLog: Start tracking changes.
