@@ -1,15 +1,14 @@
 aclocal.m4
+ChangeLog
 config.h.in
 configure.ac
 COPYING
 COPYING.LIB
-.cvsignore
-examples/.cvsignore
 examples/.depend
 examples/list_domains.ml
 examples/Makefile.in
+.hgignore
 install-sh
-libvirt/.cvsignore
 libvirt/.depend
 libvirt/libvirt_c.c
 libvirt/libvirt.ml
@@ -21,11 +20,9 @@ Makefile.in
 Make.rules
 MANIFEST
 META.in
-mlvirsh/.cvsignore
 mlvirsh/.depend
 mlvirsh/Makefile.in
 mlvirsh/mlvirsh.ml
-mlvirtmanager/.cvsignore
 mlvirtmanager/.depend
 mlvirtmanager/Makefile.in
 mlvirtmanager/mlvirtmanager_connections.ml
@@ -40,7 +37,8 @@ mlvirtmanager/mlvirtmanager.ml
 README
 TODO.libvirt
 TODO.virt-top
-virt-top/.cvsignore
+virt-df/Makefile.in
+virt-df/virt_df.ml
 virt-top/.depend
 virt-top/Makefile.in
 virt-top/README
